--- a/devops.html
+++ b/devops.html
@@ -38,16 +38,20 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://synedat.join.com/jobs/259910-devops-engineer-m-w-d'>Job @ Synedat Consulting (Frankfurt): DevOps Engin... | JOIN</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Anitian/743999692312070-devops-engineer-cloud-automation-engineering-'>Anitian  DevOps Engineer (Cloud Automation Engineering) | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://synedat.join.com/jobs/259910-devops-engineer-m-w-d'>Job @ Synedat Consulting (Frankfurt): DevOps Engin... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
 <h5><a href='https://synedat.join.com/jobs/266644-devops-engineer-m-w-d'>Job @ Synedat Consulting (Berlin): DevOps Engineer... | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
 <h5><a href='https://synedat.join.com/jobs/267792-devops-engineer-m-w-d'>Job @ Synedat Consulting (Munich): DevOps Engineer... | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=obB08fwE&__jvst=Employee+Referral&__jvsd=sbDU6fwy&__jvsc=Twitter&bid=nuWSTKwq'>Cirrus Logic Careers - DevOps Engineer</a></h5> 
@@ -88,7 +92,7 @@
 <p><span class="badge badge-light">Richmond Toronto, ON Canada</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/averityteam/job/57d8pkzu9b61ndhtsuq7pwixfy'>DevOps Engineer | Averity</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/57d8pkzu9b61ndhtsuq7pwixfy'>DevOps Engineer | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY, United States</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -115,7 +119,7 @@ term?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/centralway/job/oSYu9fwd'>Numbrs Personal Finance AG Careers - DevOps / Site Reliability Engineer - Luxembourg</a></h5> 
+<h5><a href='https://jobs.jobvite.com/centralway/job/oSYu9fwd'>Numbrs Personal Finance AG Careers - DevOps / Site Reliability Engineer - Luxembourg</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -135,7 +139,7 @@ term?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://workforcesource.recruiterbox.com/jobs/fk03f4v'>
+<h5><a href='http://workforcesource.recruiterbox.com/jobs/fk03f4v'>
     0723 - Sr DevOps Engineer at Workforce Source
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -259,11 +263,11 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 <p><span class="badge badge-light">Tampa, FLTampa, FL</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/12FF45BC25'>Fetchr - Jobs: DevOps Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/12FF45BC25'>Fetchr - Jobs: DevOps Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply online for the job of DevOps Engineer at Fetchr.</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/19026CFFDB'>QuadPay - Jobs: Senior Software Engineer (DevOps) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/19026CFFDB'>QuadPay - Jobs: Senior Software Engineer (DevOps) - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Apply online for the job of Senior Software Engineer (DevOps) at QuadPay.</p>
 <hr/>
@@ -323,7 +327,7 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://chilipublish.recruitee.com/o/qa-engineer-devops-specialist'>
+<h5><a href='https://chilipublish.recruitee.com/o/qa-engineer-devops-specialist'>
       QA Engineer / DevOps Specialist - CHILI publish
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -338,7 +342,7 @@ published: 08.03.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://twincap.join.com/jobs/260855-devops-engineer-senior-devops-engineer'>Job @ TwinCap (Z?rich): DevOps Engineer / Senior D... | JOIN</a></h5> 
+<h5><a href='https://twincap.join.com/jobs/260855-devops-engineer-senior-devops-engineer'>Job @ TwinCap (Z?rich): DevOps Engineer / Senior D... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>vor 4 Tagen ... TwinCap GmbH has a job opening for DevOps Engineer / Senior DevOps 
 Engineer in Z?rich (published: 19.07.2019). Apply now or check the other 
@@ -403,7 +407,7 @@ relationships through actionable data, advanced analytics and machine learning.<
 <p><span class="badge badge-light">Sunnyvale, CA</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/devopsdna/job/r7jttbwaxeafih6n4f17d57q7e'>DevOps Engineer (Contract) | RecruiterDNA | DevOpsDNA - Job Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/devopsdna/job/r7jttbwaxeafih6n4f17d57q7e'>DevOps Engineer (Contract) | RecruiterDNA | DevOpsDNA - Job Page</a></h5> 
 <p><span class="badge badge-light">Sunnyvale, CA</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -438,7 +442,7 @@ on the AWS platform, as well as crafting and implementing infrastructure as?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/meilleursagents/65418c29-3ea3-4db8-8baf-db794f1bdf87'>MeilleursAgents - DevOps engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/meilleursagents/65418c29-3ea3-4db8-8baf-db794f1bdf87'>MeilleursAgents - DevOps engineer</a></h5> 
 <p><span class="badge badge-light">Ile de France</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -457,10 +461,6 @@ on the AWS platform, as well as crafting and implementing infrastructure as?...<
 <p>Posted on: 2019-07-22</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999692076138-system-engineer-devops-senior-system-engineer-devops'>Netcentric System Engineer - DevOps: Senior System Engineer -DevOps | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-22</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999692076158-system-engineer-devops-junior-mid-system-engineer-devops'>Netcentric System Engineer - DevOps: Junior/Mid System Engineer -DevOps | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
