--- a/project-manager.html
+++ b/project-manager.html
@@ -41,15 +41,15 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://jobs.jobvite.com/linkedin/job/o6VBafww'>LinkedIn Careers - Insights Program Manager, LinkedIn Marketing Solutions</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">San Francisco California</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/linkedin/job/oLuCafwL'>LinkedIn Careers - Global Talent Organization PMO ? Program Manager</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Sunnyvale California</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
 <h5><a href='https://cbre.referrals.selectminds.com/jobs/sr-project-manager-58311'>Sr Project Manager - CBRE Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Washington, United States</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
 <h5><a href='https://shijigroup.join.com/jobs/251716-product-program-manager-m-f'>Job @ Shiji (Berlin): Product Program Manager (m/f) | JOIN</a></h5> 
@@ -92,7 +92,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://boh.referrals.selectminds.com/jobs/project-manager-corporate-real-estate-facilities-3745'>Project Manager (Corporate Real Estate & Facilities) - Bank of Hawaii Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boh.referrals.selectminds.com/jobs/project-manager-corporate-real-estate-facilities-3745'>Project Manager (Corporate Real Estate & Facilities) - Bank of Hawaii Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -270,7 +270,7 @@ of data types including speech, text, image and video. With deep expertise in?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999692236443-senior-project-manager-m-w-d-'>Publicis Groupe Senior Project Manager (m/w/d) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999692236443-senior-project-manager-m-w-d-'>Publicis Groupe Senior Project Manager (m/w/d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -347,7 +347,7 @@ new program management office to support the NIH. On our team, you'll monitor?..
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BIC/743999692221298-it-senior-project-manager-supply-chain'>BIC IT Senior Project Manager ? Supply Chain | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BIC/743999692221298-it-senior-project-manager-supply-chain'>BIC IT Senior Project Manager ? Supply Chain | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -492,7 +492,7 @@ in?...</p>
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://planate.recruiterbox.com/jobs/fk03mvk/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://planate.recruiterbox.com/jobs/fk03mvk/'>
     Project Manager/Programmer at Planate Management Group
 </a></h5> 
 <p><span class="badge badge-light">Philippines</span></p>
